--- a/html/cursos.html
+++ b/html/cursos.html
@@ -11,7 +11,9 @@
     </ul>
 
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore-compat.js"></script>
+    
     <script src="../js/auth/firebase_config.js"></script>
     <script src="../js/redirect/redirect.js"></script>
     <script src="../js/cursos/cursos.js"></script> 
