--- a/html/home.html
+++ b/html/home.html
@@ -12,6 +12,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore-compat.js"></script>
 
     <script src="../js/auth/firebase_config.js"></script>
     <script src="../js/auth/auth.js"></script>
