--- a/html/login.html
+++ b/html/login.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <a  href="https://icons8.com/icon/23265/user"></a><a href="https://icons8.com"></a>
+    <link rel="stylesheet" href="login.css">
     <title>Riofer =] </title>
 </head>
 <body>
-    <h2>Login Riofer</h2>
-    <form id="loginForm">
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="password" id="password" placeholder="Senha" required>
-        <button type="submit">Login</button>
+    
+    <div class="formulario">
+        <img  src="img/logo.png">
+        <div class="campo">
+      <form id="loginForm">
+        <label for="campo-email"></label>
+        <input type="email" id="email" placeholder="E-mail" required>
+        <img class="images" width="20" height="20" src="https://img.icons8.com/ios-filled/20/A9A9A9/user.png" alt="user"/>
+    </div>
+    <div class="campo">
+        <label for="campo-senha"></label>
+        <input id="password" type="password" placeholder="Senha" required>
+        <img class="images" width="20" height="20" src="https://img.icons8.com/ios-glyphs/20/A9A9A9/lock--v1.png" alt="lock--v1"/>
+    </div>
+    <div class="campo">
+        <button type="submit">enviar</button>
+    </div>
     </form>
-    <p id="error-message" style="color:red;"></p>
-
+</div>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
 
@@ -22,3 +38,8 @@
     <script src="../js/redirect/redirect.js"></script>
 </body>
 </html>
+
+
+
+   
+
