--- a/html/login.html
+++ b/html/login.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     
+    
     <div class="formulario">
         <img  src="img/logo.png">
         <div class="campo">
@@ -30,6 +31,37 @@
     </div>
     </form>
 </div>
+    <a target="_blank" href="https://forms.office.com/r/Ph3mZaCbHy?embed=true%22">
+    <button class="button-Harassment" type="submit">Portal de denúncias</button>
+</a>
+
+<section class="footer-icons">
+    <div class="share">
+        <a href="https://www.instagram.com/rioferindustrial/">
+        <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/000000/instagram-new.png" alt="instagram-new"/>
+    </a>
+
+    <a href="https://api.whatsapp.com/send?phone=556436122004">
+        <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/000000/whatsapp.png" alt="whatsapp"/>
+    </a>
+
+    <a href="http://www.youtube.com/@rioferindustrial5110">
+        <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/000000/youtube-play.png" alt="youtube-play"/>
+    </a>
+
+    </div>
+</section>
+
+
+<footer>
+    <p class="text-rights">RIOFER © 2024. TODOS OS DIREITOS RESERVADOS.</p>
+</footer>
+
+
+
+
+
+
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
 
