--- a/html/login.html
+++ b/html/login.html
@@ -31,9 +31,7 @@
     </div>
     </form>
 </div>
-    <a target="_blank" href="https://forms.office.com/r/Ph3mZaCbHy?embed=true%22">
-    <button class="button-Harassment" type="submit">Portal de denúncias</button>
-</a>
+
 
 <section class="footer-icons">
     <div class="share">
@@ -51,6 +49,14 @@
 
     </div>
 </section>
+
+
+<div class="button-anima">
+    <a target="_blank" href="https://forms.office.com/r/Ph3mZaCbHy?embed=true%22">
+    <button class="button-Harassment" type="submit">Portal de denúncias</button>
+</a>
+</div>
+
 
 
 <footer>
