--- a/html/cursos.html
+++ b/html/cursos.html
@@ -16,6 +16,6 @@
     
     <script src="../js/auth/firebase_config.js"></script>
     <script src="../js/redirect/redirect.js"></script>
-    <script src="../js/cursos/cursos.js"></script> 
+    <script src="../js/cursos/exibirCursos.js"></script> 
 </body>
 </html>
