--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
         <ul>
             <li><a class="text-home" id="logout" href="#">Logout</a></li>
             <li><a onclick="window.location.href='cursos.html'">Cursos</a></li>
+            <li><a onclick="window.location.href='cadastroTreinamento.html'">Cadastrar Treinamento</a></li>
             <li>
                 <a class="text-chamados" href="#">Chamados <img class="icon-suspend" width="20" height="20" src="https://img.icons8.com/metro/20/ffffff/expand-arrow.png" alt="expand-arrow"/></a>
                 <ul class="dropdown">
