--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="/paginas/home/home.css">
     <a  href="https://icons8.com/icon/59864/mais"></a><a href="https://icons8.com"></a>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,13 +15,13 @@
 
     <header>
         <ul>
-            <li><a class="text-home" id="logout" href="#">Logout</a></li>
-            <li><a onclick="window.location.href='cursos.html'">Cursos</a></li>
-            <li><a onclick="window.location.href='cadastroTreinamento.html'">Cadastrar Treinamento</a></li>
+            <li><a class="text-home" id="logout" href="/index.html">Logout</a></li>
+            <li><a onclick="window.location.href='/paginas/treinamento/cursos.html'">Cursos</a></li>
+            <li><a onclick="window.location.href='/paginas/treinamento/cadastroTreinamento.html'">Cadastrar Treinamento</a></li>
             <li>
-                <a class="text-chamados" href="#">Chamados <img class="icon-suspend" width="20" height="20" src="https://img.icons8.com/metro/20/ffffff/expand-arrow.png" alt="expand-arrow"/></a>
+                <a class="text-chamados" href="#">Chamados <span class="icon-set"> > </span> </a>
                 <ul class="dropdown">
-                    <li><a href="formulario.html">Criar</a></li>
+                    <li><a href="/paginas/chamados/formulario.html">Criar</a></li>
                     <li><a href="#">Visualizar</a></li>
                 </ul>
             </li>
@@ -31,7 +31,7 @@
     <main class="container">
         <div class="list">
             <div class="list-item">
-                <img src="img/e43a4d128c9a9560294a5da3b6814bef.jpg">
+                <img src="images-home/e43a4d128c9a9560294a5da3b6814bef.jpg">
                 <div class="content">
                     <h2 class="title">Bali</h2>
                     <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus fugiat omnis doloribus ipsam incidunt. Vel obcaecati repellendus sint sapiente, unde quaerat tempora natus dolorem tempore. Quo deserunt consequatur fugit hic.</p>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="list-item">
-                <img src="img/maxresdefault.jpg">
+                <img src="images-home/maxresdefault.jpg">
                 <div class="content">
                     <h2 class="title">Riofer</h2>
                     <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus fugiat omnis doloribus ipsam incidunt. Vel obcaecati repellendus sint sapiente, unde quaerat tempora natus dolorem tempore. Quo deserunt consequatur fugit hic.</p>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="list-item">
-                <img src="img/riofer.jpg">
+                <img src="images-home/riofer.jpg">
                 <div class="content">
                     <h2 class="title">Riofer</h2>
                     <p class="description">A qualidade, variedade, rapidez e segurança nas nossas operações são obtidas pelo constante investimento no processo produtivo. Nós somos a Riofer Industrial, estamos evoluindo a cada dia, construindo um futuro de aço com você.</p>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="list-item">
-                <img src="img/Cópia de RH - TREINAMENTO.jpg">
+                <img src="images-home/Cópia de RH - TREINAMENTO.jpg">
                 <div class="content">
                     <h2 class="title">Riofer</h2>
                     <p class="description">Sediada em uma moderna e confortável estrutura em Rio Verde - GO e com uma filial em Jataí - GO, a Riofer é considerada referência no seu segmento gerando mais de noventa empregos diretos.
@@ -83,7 +83,7 @@
         <div class="thumb">
 
             <div class="thumb-item">
-                <img src="img/e43a4d128c9a9560294a5da3b6814bef.jpg" alt="foto-cidade">
+                <img src="images-home/e43a4d128c9a9560294a5da3b6814bef.jpg" alt="foto-cidade">
                 <div class="content">
                     <h3>Bali</h3>
                     <p>Visite Bali</p>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="thumb-item">
-                <img src="img/maxresdefault.jpg" alt="foto-cidade">
+                <img src="images-home/maxresdefault.jpg" alt="foto-cidade">
                 <div class="content">
                     <h3>Riofer</h3>
                     <p>Visite Riofer</p>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="thumb-item">
-                <img src="img/riofer.jpg" alt="foto-cidade">
+                <img src="images-home/riofer.jpg" alt="foto-cidade">
                 <div class="content">
                     <h3>Riofer</h3>
                     <p>Visite Riofer</p>
@@ -107,7 +107,7 @@
             </div>
 
             <div class="thumb-item">
-                <img src="img/Cópia de RH - TREINAMENTO.jpg" alt="foto-riofer">
+                <img src="images-home/Cópia de RH - TREINAMENTO.jpg" alt="foto-riofer">
                 <div class="content">
                     <h3>Riofer</h3>
                     <p>Visite Riofer</p>
@@ -126,10 +126,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore-compat.js"></script>
 
-    <script src="../js/auth/firebase_config.js"></script>
-    <script src="../js/auth/auth.js"></script>
-    <script src="../js/redirect/redirect.js"></script>
-    <script src="../js/thumb/scripts.js"></script> 
+    <script src="/js/auth/firebase_config.js"></script>
+    <script src="/js/auth/auth.js"></script>
+    <script src="/js/redirect/redirect.js"></script>
+    <script src="/js/thumb/scripts.js"></script> 
 
     <script>
         auth.onAuthStateChanged(user => {
