--- a/paginas/treinamento/cursos.html
+++ b/paginas/treinamento/cursos.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/paginas/treinamento/cursos.css">
     <title>Cursos internos da riofer</title>
 </head>
 <body>
@@ -14,8 +15,8 @@
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore-compat.js"></script>
     
-    <script src="../js/auth/firebase_config.js"></script>
-    <script src="../js/redirect/redirect.js"></script>
-    <script src="../js/cursos/exibirCursos.js"></script> 
+    <script src="/js/auth/firebase_config.js"></script>
+    <script src="/js/redirect/redirect.js"></script>
+    <script src="/js/cursos/exibirCursos.js"></script> 
 </body>
 </html>
