--- a/paginas/chamados/formulario.html
+++ b/paginas/chamados/formulario.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <script src="https://kit.fontawesome.com/eca1d030bb.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>riofer.com.br</title>
-    <link rel="stylesheet" href="/css/formulario.css">
+    <link rel="stylesheet" href="/paginas/chamados/formulario.css">
 </head>
 <body>
     <div class="content">
