--- a/paginas/treinamento/cadastroTreinamento.html
+++ b/paginas/treinamento/cadastroTreinamento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/paginas/treinamento/cadastroTreinamento.css">
+    <link rel="stylesheet" href="./cadastroTreinamento.css">
     <title>Cadastrar Novo Curso</title>
 </head>
 <body>
@@ -31,8 +31,8 @@
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore-compat.js"></script>
     
-    <script src="../js/auth/firebase_config.js"></script>
-    <script src="../js/redirect/redirect.js"></script>
-    <script src="../js/cursos/cursos.js"></script>
+    <script src="/js/auth/firebase_config.js"></script>
+    <script src="/js/redirect/redirect.js"></script>    
+    <script src="/js/treinamentos/cursos.js"></script>
 </body>
 </html>
