--- a/paginas/treinamento/cursos.html
+++ b/paginas/treinamento/cursos.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton+SC&family=Archivo+Black&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Mono+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/paginas/treinamento/cursos.css">
+<link rel="stylesheet" href="./cursos.css">
     <title>Cursos internos da riofer</title>
 </head>
 <body>
@@ -20,6 +20,6 @@
     
     <script src="/js/auth/firebase_config.js"></script>
     <script src="/js/redirect/redirect.js"></script>
-    <script src="/js/cursos/exibirCursos.js"></script> 
+    <script src="/js/treinamentos/exibirCursos.js"></script>
 </body>
 </html>
