--- a/paginas/treinamento/cadastroTreinamento.html
+++ b/paginas/treinamento/cadastroTreinamento.html
@@ -33,6 +33,6 @@
     
     <script src="/js/auth/firebase_config.js"></script>
     <script src="/js/redirect/redirect.js"></script>    
-    <script src="/js/treinamentos/cursos.js"></script>
+    <script src="/js/treinamentos/cadastroTreinamento.js"></script>
 </body>
 </html>
