--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -16,7 +16,7 @@
     <header>
         <ul>
             <li><a class="text-home" id="logout" href="/index.html">Logout</a></li>
-            <li><a onclick="window.location.href='/paginas/treinamento/cursos.html'">Cursos</a></li>
+            <li><a onclick="window.location.href='/paginas/treinamento/treinamento.html'">Treinamentos</a></li>
             <li><a onclick="window.location.href='/paginas/treinamento/cadastroTreinamento.html'">Cadastrar Treinamento</a></li>
             <li>
                 <a class="text-chamados" href="#">Chamados <span class="icon-set"> > </span> </a>
