--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
 </head>
 <body>
     
-    <header>
+    <aside>
         <img src="images-index/logo.png">
         <div class="text-login">
-            <h1 class="title-login">Riofer Conecta</h1>
+            <h1 class="title-login">
+                <span>F</span>
+                <span>U</span>
+                <span>T</span>
+                <span>U</span>
+                <span>R</span>
+                <span>A</span>
+                <span>Ç</span>
+                <span>O</span>
+            </h1>
         </div>
-    </header>
+    </aside>
 
     <section class="Login-conect">
         <div class="container-father">
