--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
                     <input id="password" type="password" placeholder="senha" required>
                 </div>
                 <button type="submit">Entrar</button>
+
+               
                 <p id="error-message" style="color: red;"></p> <!-- Elemento para mostrar mensagens de erro -->
-                <p><a href="#">Esqueci a Senha</a></p>
+                <p><a href="#">Esqueci a Senha</a>
+                    <div class="loader"></div></p>
             </form>
         </div>
     </section>
