--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -27,6 +27,9 @@
             </li>
     </header>
 
+<div>
+    
+</div>
 
     <main class="container">
         <div class="list">
@@ -144,5 +147,18 @@
             });
         });
     </script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        setTimeout(() => {
+            document.getElementById('animation').style.display = 'none';
+            document.getElementById('main-content').style.display = 'block';
+        }, 3000);
+    });
+</script>
+
+
+
+
 </body>
 </html
