--- a/paginas/treinamento/treinamento.html
+++ b/paginas/treinamento/treinamento.html
@@ -20,10 +20,12 @@
         <div class="square">R</div>
     </div>
 
+    <nav>
     <div id="main-content" style="display: none;">
         <h2>Cursos Disponíveis</h2>
         <ul id="cursos-list"></ul>
     </div>
+</nav>
 
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
