--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -27,6 +27,23 @@
             </li>
     </header>
 
+    <div class="menu-mobile">
+        <div class="btn-close">
+            <img width="40" height="40" src="https://img.icons8.com/ios-glyphs/40/ffffff/delete-sign.png" alt="delete-sign"/>
+        </div>
+        <ul>
+            <li><a id="logout" href="/index.html">Logout</a></li>
+            <li><a onclick="window.location.href='/paginas/treinamento/treinamento.html'">Treinamentos</a></li>
+            <li><a onclick="window.location.href='/paginas/treinamento/cadastroTreinamento.html'">Cadastrar Treinamento</a></li>
+            <li>
+                <a  href="#">Chamados</span> </a>
+                <ul>
+                    <li><a href="/paginas/chamados/formulario.html">Criar</a></li>
+                    <li><a href="#">Visualizar</a></li>
+                </ul>
+            </li>
+    </div>
+
 <div>
     
 </div>
