--- a/index.html
+++ b/index.html
@@ -48,10 +48,29 @@
                
                 <p id="error-message" style="color: red;"></p> <!-- Elemento para mostrar mensagens de erro -->
                 <p><a href="#">Esqueci a Senha</a>
-                    <div class="loader"></div></p>
             </form>
+            <nav>
+                <div class="grad-icons">
+                    <div class="icon-facebook">
+                    <a href="https://www.facebook.com/rioferindustrial/" target="_blank"><img width="35" height="35" src="https://img.icons8.com/ios-filled/35/ffffff/facebook-new.png" alt="facebook-new"/></a>
+                </div>
+                
+                <div class="icon-youtube">
+                    <a href="https://www.youtube.com/@rioferindustrial5110" target="_blank"><img width="35" height="35" src="https://img.icons8.com/ios-filled/35/ffffff/youtube-play.png" alt="youtube-play"/></a>
+                </div>
+                <div class="icon-instagram">
+                    <a href="https://www.instagram.com/rioferindustrial/" target="_blank"><img width="35" height="35" src="https://img.icons8.com/ios-filled/35/ffffff/instagram-new--v1.png" alt="instagram-new--v1"/></a>
+                </div>
+                </div>
+            </nav>
+
+            <div class="button-chamados">
+                <a href="https://forms.office.com/r/Ph3mZaCbHy?embed=true%22" target="_blank">Denúncias e Abusos</a>
+            </div>
         </div>
     </section>
+
+   
 
     <footer>
         <p class="text-rights">RIOFER © 2024. TODOS OS DIREITOS RESERVADOS.</p>
