Carregar e exibir imagens

--- a/paginas/treinamento/treinamento.html
+++ b/paginas/treinamento/treinamento.html
@@ -22,6 +22,9 @@
 
     <nav>
     <div id="main-content" style="display: none;">
+        <ul>
+            <li><a href="/paginas/treinamento/cadastroTreinamento.html">Cadastrar Treinamento</a></li>
+        </ul>
         <h2>Cursos Disponíveis</h2>
         <ul id="cursos-list"></ul>
     </div>
