--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -17,6 +17,7 @@
         <ul>
             <li><a class="text-home" id="logout" href="/index.html">Logout</a></li>
             <li><a onclick="window.location.href='/paginas/treinamento/treinamento.html'">Treinamentos</a></li>
+            <li><a onclick="window.location.href='/paginas/treinamento/cadastroTreinamento.html'">Cadastrar Treinamento</a></li>
             <li>
                 <a class="text-chamados" href="#">Chamados <span class="icon-set"> > </span> </a>
                 <ul class="dropdown">
@@ -33,6 +34,7 @@
         <ul>
             <li><a id="logout" href="/index.html">Logout</a></li>
             <li><a onclick="window.location.href='/paginas/treinamento/treinamento.html'">Treinamentos</a></li>
+            <li><a onclick="window.location.href='/paginas/treinamento/cadastroTreinamento.html'">Cadastrar Treinamento</a></li>
             <li>
                 <a  href="#">Chamados</span> </a>
                 <ul>
