--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -13,40 +13,24 @@
 </head>
 <body>
 
-    <header>
-        <ul>
-            <li><a class="text-home" id="logout" href="/index.html">Logout</a></li>
-            <li><a onclick="window.location.href='/paginas/treinamento/treinamento.html'">Treinamentos</a></li>
-            <li><a onclick="window.location.href='/paginas/treinamento/cadastroTreinamento.html'">Cadastrar Treinamento</a></li>
-            <li>
-                <a class="text-chamados" href="#">Chamados <span class="icon-set"> > </span> </a>
-                <ul class="dropdown">
-                    <li><a href="/paginas/chamados/formulario.html">Criar</a></li>
-                    <li><a href="#">Visualizar</a></li>
-                </ul>
-            </li>
-    </header>
-
-    <div class="menu-mobile">
-        <div class="btn-close">
-            <img width="40" height="40" src="https://img.icons8.com/ios-glyphs/40/ffffff/delete-sign.png" alt="delete-sign"/>
+      <header>
+        <div class="container-header">
+            <div class="logo">
+                <img src="/images-index/logo.png" width="350px" height="220px" alt="logo-riofer">
+            </div>
+            <nav class="nav-home">
+                <a href="#">
+                    <img src="images-home/icon-header-learn.dbd055b4.svg" alt="icon-learn">
+                    Treinamento
+                </a>
+                <a href="#">
+                    <img src="images-home/icon-header-community.98f2eed7.svg" alt="icon-community">
+                    Chamados
+                </a>
+                <a href="#">Blog</a>
+            </nav>
         </div>
-        <ul>
-            <li><a id="logout" href="/index.html">Logout</a></li>
-            <li><a onclick="window.location.href='/paginas/treinamento/treinamento.html'">Treinamentos</a></li>
-            <li><a onclick="window.location.href='/paginas/treinamento/cadastroTreinamento.html'">Cadastrar Treinamento</a></li>
-            <li>
-                <a  href="#">Chamados</span> </a>
-                <ul>
-                    <li><a href="/paginas/chamados/formulario.html">Criar</a></li>
-                    <li><a href="#">Visualizar</a></li>
-                </ul>
-            </li>
-    </div>
-
-<div>
-    
-</div>
+      </header>
 
     <main class="container">
         <div class="list">
