--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -16,7 +16,7 @@
       <header>
         <div class="container-header">
             <div class="logo">
-                <img src="/images-index/logo.png" width="350px" height="220px" alt="logo-riofer">
+                <img src="/images-index/logo.png" alt="logo-riofer" class="logo">
             </div>
             <nav class="nav-home">
                 <a href="#">
