--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -48,6 +48,16 @@
         </div>
       </header>
 
+    <main>
+        <section id="eventos">
+            <h2>Eventos</h2>
+            <div id="eventos-container" class="blogs-container"></div>
+        </section>
+
+        <section id="publicacoes">
+            <h2>Publicações</h2>
+            <div id="publicacoes-container" class="blogs-container"></div>
+        </section>
     </main>
 
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
@@ -57,14 +67,12 @@
     <script src="/js/auth/firebase_config.js"></script>
     <script src="/js/auth/auth.js"></script>
     <script src="/js/redirect/redirect.js"></script>
-
-    <script>
+    <script src="/js/home/home.js"></script> <script>
         auth.onAuthStateChanged(user => {
             if (!user) {
                 redirectToLogin();
             }
         });
     </script>
-    <script src="../home/home.js"></script>
 </body>
-</html
+</html>
