--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -16,11 +16,8 @@
       <header>
         <div class="container-header">
             <div class="logo">
-<<<<<<< HEAD
                 <img src="/images-index/logo.png" width="180vw" height="auto" alt="logo-riofer">
-=======
-                <img src="/images-index/logo.png" alt="logo-riofer" class="logo">
->>>>>>> c841b8cebb60d111107f4d7a83856c097688f98b
+
             </div>
             <nav class="nav-home">
                 <a class="hideOnMobile" href="#">
@@ -33,8 +30,16 @@
                 </a>
                 <a class="hideOnMobile" href="#">Blog</a>
 
+
                 <a class="icon-menu" onclick=showSidebar() href="#"><img src="images-home/menu_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="icon-menu"></a>
             </nav>
+
+            <div class="icon-exit">
+                <a id="logout" href="#">
+                    <img src="images-home/icon-exit.7bfce337.svg" alt="icon-exit">
+                    Desconectar
+                </a>
+            </div>
 
             <div class="sidebar">
 
