--- a/paginas/treinamento/treinamento.html
+++ b/paginas/treinamento/treinamento.html
@@ -20,11 +20,27 @@
         <div class="square">R</div>
     </div>
 
+<header>
+    <div class="header-training">
+        <div class="logo-riofer">
+            <img src="/images-index/logo.png" alt="logo-riofer">
+        </div>
+        <nav class="nav-header">
+            <a href="#">Cadastrar Treinamento</a>
+        </nav>
+
+        <div class="icon-back">
+            <a href="#">
+            <img src="/paginas/home/images-home/icon-exit.7bfce337.svg" alt="icon-back">
+                Voltar
+            </a>
+        </div>
+    </div>
+</header>
+
+
     <nav>
         <div id="main-content" style="display: none;">
-            <ul>
-                <li><a href="/paginas/treinamento/cadastroTreinamento.html">Cadastrar Treinamento</a></li>
-            </ul>
             <h2>Cursos Disponíveis</h2>
             <ul id="cursos-list"></ul> 
         </div>
