--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -76,11 +76,19 @@
     <script src="/js/auth/firebase_config.js"></script>
     <script src="/js/auth/auth.js"></script>
     <script src="/js/redirect/redirect.js"></script>
-    <script src="/js/home/home.js"></script> <script>
+    <script src="/js/home/home.js"></script> 
+    
+    <script>
         auth.onAuthStateChanged(user => {
             if (!user) {
                 redirectToLogin();
             }
+        });
+
+        document.getElementById('logout').addEventListener('click', function() {
+            auth.signOut().then(() => {
+                redirectToLogin();
+            });
         });
     </script>
 </body>
