--- a/paginas/treinamento/treinamento.html
+++ b/paginas/treinamento/treinamento.html
@@ -26,13 +26,14 @@
             <img src="/images-index/logo.png" alt="logo-riofer">
         </div>
         <nav class="nav-header">
-            <a href="#">Cadastrar Treinamento</a>
+            <img width="45" height="45" src="https://img.icons8.com/ios/45/ffffff/add--v1.png" alt="add--v1"/>
+            <a href="/paginas/treinamento/cadastroTreinamento.html">Cadastrar Treinamento</a>
         </nav>
 
         <div class="icon-back">
-            <a href="#">
-            <img src="/paginas/home/images-home/icon-exit.7bfce337.svg" alt="icon-back">
-                Voltar
+            <a href="/paginas/home/home.html">
+                <img width="40" height="40" src="https://img.icons8.com/windows/40/ffffff/home.png" alt="home"/>
+                Inicio
             </a>
         </div>
     </div>
@@ -45,6 +46,14 @@
             <ul id="cursos-list"></ul> 
         </div>
 </nav>
+
+
+
+<footer>
+    <p class="text-rights">RIOFER © 2024. TODOS OS DIREITOS RESERVADOS.</p>
+</footer>
+
+
 
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
