--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 </div>
                 <button type="submit">Entrar</button>
 
+                <div class="loader"></div>
+
                
                 <p id="error-message" style="color: red;"></p> <!-- Elemento para mostrar mensagens de erro -->
                 <p><a href="#">Esqueci a Senha</a>
