Cadastro de usuário

--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -55,6 +55,7 @@
                 <a href="../blog/blogCadarastro.html">Blog</a>
             </div>
         </div>
+        <div id="user-info" class="user-info"> </div> 
       </header>
 
     <main>
