--- a/paginas/chamados/formulario.html
+++ b/paginas/chamados/formulario.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div class="content">
-        <h1>RIOFER</h1>
+        <h1>Chamados</h1>
         <form>
             <div>
-                <input type="text" placeholder="Título" class="inputs">
+                <p>Titulo:</p>
+                <input type="text"class="inputs">
                 <span class="span-required"></span>
             </div>
-            <textarea class="inputs" name="descricao" id="descricao" cols="25" rows="10" placeholder="Descrição..."></textarea>
+            <p>Descriçao:</p>
+            <textarea  name="descricao" id="descricao" cols="25" rows="0"></textarea>
             <p>Categoria:</p>
             <select id="categoria">
                 <option value="sap">SAP</option>
