--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -27,8 +27,15 @@
                     <img src="images-home/icon-header-community.98f2eed7.svg" alt="icon-community">
                     Chamados
                 </a>                                
-                <a class="hideOnMobile" href="../blog/blogCadarastro.html">Blog</a>
+                <a class="hideOnMobile" href="../blog/blogCadarastro.html">
+                    <img src="images-home/edit_note_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    Blog
+                </a>
 
+                <a class="hideOnMobile" href="../cadastro/cadastro.html">
+                    <img src="images-home/menu_book_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="icon-community">
+                    Cadastros
+                </a>                                
 
                 <a class="icon-menu" onclick=showSidebar() href="#"><img src="images-home/menu_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg" alt="icon-menu"></a>
             </nav>
@@ -53,6 +60,10 @@
                     Chamados
                 </a>
                 <a href="../blog/blogCadarastro.html">Blog</a>
+
+                <a href="/paginas/cadastro/cadastro.html">
+                    cadastro
+                </a>
             </div>
         </div>
         <div id="user-info" class="user-info"> </div> 
