--- a/paginas/cadastro/cadastro.html
+++ b/paginas/cadastro/cadastro.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="cadastro.css">
     <title>Cadastro - Riofer</title>
 <body>
+
+    <header>
+        <div class="icon-exit">
+            <a id="logout" href="../home/home.html">
+                <img src="../home/images-home/icon-exit.7bfce337.svg"  alt="icon-exit">
+                Voltar
+            </a>
+        </div>
+    </header>
+
     <section class="cadastro-conect">
         <div class="container-father">
             <h1>Cadastro</h1>
