--- a/paginas/chamados/chamados.html
+++ b/paginas/chamados/chamados.html
@@ -5,9 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>riofer.com.br</title>
-    <link rel="stylesheet" href="/paginas/chamados/formulario.css">
+    <link rel="stylesheet" href="/paginas/chamados/chamados.css">
 </head>
 <body>
+
+    <header>
+        <div class="icon-exit">
+            <a id="logout" href="../home/home.html">
+                <img src="../home/images-home/icon-exit.7bfce337.svg"  alt="icon-exit">
+                Voltar
+            </a>
+        </div>
+    </header>
+
     <div class="content">
         <h1>Chamados</h1>
         <form>
