--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -23,7 +23,7 @@
                     <img src="images-home/icon-header-learn.dbd055b4.svg" alt="icon-learn">
                     Treinamento
                 </a>
-                <a class="hideOnMobile" href="../chamados/formulario.html">
+                <a class="hideOnMobile" href="../chamados/chamados.html">
                     <img src="images-home/icon-header-community.98f2eed7.svg" alt="icon-community">
                     Chamados
                 </a>                                
@@ -55,7 +55,7 @@
                    
                     Treinamento
                 </a>
-                <a href="../chamados/formulario.html">
+                <a href="../chamados/chamados.html">
                     
                     Chamados
                 </a>
