--- a/paginas/treinamento/cadastroTreinamento.html
+++ b/paginas/treinamento/cadastroTreinamento.html
@@ -14,10 +14,10 @@
     <h2>Cadastrar Novo Curso</h2>
     <form id="curso-form">
         <label for="titulo"></label>
-        <input type="text" placeholder="Titulo:" id="titulo" name="titulo" required><br><br>
+        <input type="text" placeholder="Titulo:" id="titulo" name="titulo" required>
 
         <label for="descricao"></label>
-        <textarea id="descricao" placeholder="descrição:" name="descricao" required></textarea><br>
+        <textarea id="descricao" placeholder="descrição:" name="descricao" required></textarea>
 
         <p>Categoria:</p>
         <div class="box-select">
@@ -36,8 +36,8 @@
             </select>
         </div><br>
         
-        <label for="imagem">Imagem do Curso:</label><br>
-        <input type="file" id="imagem" accept="image/*" required><br><br>
+        <label for="imagem">Imagem do Curso:</label>
+        <input type="file" id="imagem" accept="image/*" required>
 
         <button type="submit">Cadastrar Curso</button>
     </form>
