--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/paginas/home/home.css">
+    <link rel="stylesheet" href="/paginas/loadingpage/carregamento.css">
     <a  href="https://icons8.com/icon/59864/mais"></a><a href="https://icons8.com"></a>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +13,15 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="loading-page" class="loader">
+        <div class="square">R</div>
+        <div class="square">I</div>
+        <div class="square">O</div>
+        <div class="square">F</div>
+        <div class="square">E</div>
+        <div class="square">R</div>
+    </div>
+    <div id="main-content" style="display: none;"> 
       <header>
         <div class="container-header">
             <div class="logo">
@@ -69,6 +79,14 @@
         <div id="user-info" class="user-info"> </div> 
       </header>
 
+      <main>
+        <h1>Eventos</h1>
+        <div id="eventos-container" class="blogs-container"></div>
+    
+        <h1>Publicações</h1>
+        <div id="publicacoes-container" class="blogs-container"></div>
+    </main>
+</div>
    
 
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
@@ -92,6 +110,7 @@
                 redirectToLogin();
             });
         });
-    </script>
+</script>
+    
 </body>
 </html>
