--- a/paginas/treinamento/modulosDetalhe.html
+++ b/paginas/treinamento/modulosDetalhe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Curso</title>
-    <link rel="stylesheet" href="curso.css"> 
+    <link rel="stylesheet" href="modulosDetalhe.css"> 
 </head>
 <body>
     <div id="curso-container">
