--- a/paginas/treinamento/treinamento.html
+++ b/paginas/treinamento/treinamento.html
@@ -41,8 +41,8 @@
 
     <nav>
         <div id="main-content" style="display: none;">
-            <h2>Cursos Disponíveis</h2>
-            <ul id="cursos-list"></ul> 
+            <ul id="cursos-list">
+            </ul>
         </div>
 </nav>
 
