--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -76,10 +76,17 @@
                 </a>
             </div>
         </div>
-      </header>
+      </header> 
+
+      <section class="section-welcome">
+            <div class="texts-welcome">
+                <div id="user-info" class="user-info"></div>
+
+                <p class="paragraph-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae soluta culpa nisi unde doloremque explicabo maiores ratione similique suscipit tempora deserunt, rerum, possimus expedita totam libero dolorum commodi temporibus eos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis quia, tempora excepturi, exercitationem voluptates neque molestiae omnis distinctio voluptate suscipit fugiat consequatur placeat rerum molestias, magni nam reprehenderit sequi ab.!</p>
+            </div>
+      </section>
 
       <main>
-        <div id="user-info" class="user-info"></div> 
         <h1>Eventos</h1>
         <div id="eventos-container" class="blogs-container"></div>
     
