--- a/paginas/home/home.html
+++ b/paginas/home/home.html
@@ -79,10 +79,9 @@
       </header> 
 
       <section class="section-welcome">
+        <div id="user-info" class="user-info"></div>
             <div class="texts-welcome">
-                <div id="user-info" class="user-info"></div>
-
-                <p class="paragraph-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae soluta culpa nisi unde doloremque explicabo maiores ratione similique suscipit tempora deserunt, rerum, possimus expedita totam libero dolorum commodi temporibus eos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis quia, tempora excepturi, exercitationem voluptates neque molestiae omnis distinctio voluptate suscipit fugiat consequatur placeat rerum molestias, magni nam reprehenderit sequi ab.!</p>
+                <p class="paragraph-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae soluta culpa nisi unde doloremque explicabo maiores ratione similique suscipit tempora deserunt, rerum, possimus expedita totam libero dolorum commodi temporibus eos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis .!</p>
             </div>
       </section>
 
