--- a/paginas/treinamento/modulosDetalhe.html
+++ b/paginas/treinamento/modulosDetalhe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Curso</title>
-    <link rel="stylesheet" href="modulosDetalhe.css"> 
+    <link rel="stylesheet" href="modulos.css"> 
 </head>
 <body>
     <div id="curso-container">
@@ -16,8 +16,10 @@
         <ul id="modulos-list"></ul>
 
         <h3>Adicionar Módulo</h3>
-        <input type="text" id="novo-modulo-titulo" placeholder="Título do Módulo">
-        <textarea id="novo-modulo-descricao" placeholder="Descrição do Módulo"></textarea>
+        <p>Título do Módulo:</p>
+        <input type="text" id="novo-modulo-titulo">
+        <p>Descrição do Módulo:</p>
+        <textarea id="novo-modulo-descricao"></textarea>
         <button id="adicionar-modulo-btn">Adicionar Módulo</button>
     </div>
 
